YUK-22500 Modify the simulator to reproduce the issue where meter events do not match point data